--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2 class="label">Poland</h2>
     <div class="flag">
       <div class="white twovert"></div>
-      <div class="red twovert"></div>
+      <div class="red twovert" style="background-color: red;"></div>
     </div>
   
     <h2 class="label">Luxembourg</h2>
@@ -37,18 +37,22 @@
     </div>
   
     <h2 class="label">Romania</h2>
-    <div class="flag" style="">
-      <!-- insert flag here -->
+    <div class="flag" style="display: flex; flex-direction: row;">
+      <div class="threehoriz" style="background-color: navy;"></div>
+      <div class="threehoriz" style="background-color: yellow;"></div>
+      <div class="threehoriz" style="background-color: red;"></div>
     </div>
   
     <h2 class="label">Mexico</h2>
-    <div class="flag">
-      <!-- insert flag here -->
+    <div class="flag mexico-f">
+      <div class="threehoriz" style="background-color: red;"></div>
+    <img src="eagle.png" class="threehoriz mexico-img">
+    <div class="threehoriz" style="background-color: green;"></div>
     </div>
 
     <h2>Margin</h2>
     <div class="margin-container">
-      <div class="flag"></div>
+      <div class="flag1"></div>
       <div class="flag"></div>
     </div>
 
